@@ -1,28 +1,44 @@
 # EvolutionBrain — Agent Info
 
+## Status
+- **Main sources compile and `MasterProofMain` runs again** as of the modernization work described below
+  (Maven 3.9.x + JDK 17+, no parent POM, current JogAmp JOGL/GlueGen + JmDNS from Maven Central).
+- Run it with: `mvn compile exec:java` (uses the `exec-maven-plugin` configured in [pom.xml](pom.xml), which
+  also passes the `--add-opens java.desktop/sun.awt=ALL-UNNAMED` flag JOGL needs on modern JDKs).
+- Test-source compilation (`fest-swing`, `jocl`/`CLInfo.java`) is not fixed yet — see step 2 below.
+
 ## Background
 - This is the source code belonging to the master thesis of Thomas Welsch (project owner) from 2011
   (see [Master-Thesis/Master–Thesis-Thomas-Welsch_2011_06_14.pdf](Master-Thesis/Master–Thesis-Thomas-Welsch_2011_06_14.pdf)).
 - It is a framework to apply evolution (mutation + selection) to randomly generated neuronal networks.
-- It includes a 3D visualisation (via JOGL/Java3D — see `tw.master.gl3d`) for viewing brains/networks.
-- The code was imported as a **direct, unmodified copy** of the 2011 source tree. It will **not** build or
-  run out of the box today (old Maven parent POM, old JOGL/JMDNS/FEST-Swing versions, JDK 1.6 target, etc.).
-- Goal going forward: modernize the toolchain/build/dependencies enough to run it again, **without**
-  restructuring the core design (e.g. do not replace the hand-rolled neural network/mutation code with an
-  external ML/NN library — the point of the thesis code is its own implementation).
+- It includes a 3D visualisation (via JOGL — see `tw.master.gl3d`) for viewing brains/networks. There is also
+  a `PurJava3dImplementation` which, despite the name, is a hand-rolled pure-Java/AWT 3D projection (no
+  dependency on the old `javax.media.j3d` Java3D API), so no Java3D migration is actually needed.
+- The code was imported as a **direct, unmodified copy** of the 2011 source tree and did not build or run
+  out of the box (old Maven parent POM, old JOGL/JMDNS/FEST-Swing versions, JDK 1.6 target, etc.).
+- Goal: modernize the toolchain/build/dependencies enough to run it again, **without** restructuring the
+  core design (e.g. do not replace the hand-rolled neural network/mutation code with an external ML/NN
+  library — the point of the thesis code is its own implementation).
 
 ## Build setup
-- Maven project (`pom.xml`) with a `parent` POM (`com.spontech:base-pom`) that originally lived in a private
-  Spontech Maven repository and is **not published anywhere accessible now**.
-- A snapshot of that parent POM is checked into this repo as [spontech_parent_pom.xml](spontech_parent_pom.xml)
-  (version 1.5.7) for reference — `pom.xml` currently depends on version 1.5.5 of it, which we don't have.
-- Native/binary dependencies (JOGL, GlueGen, JOCL, NativeWindow, JMDNS, per-OS/arch natives) are vendored as
-  jars under [lib/arch/](lib/arch/) and [lib/arch_jars/](lib/arch_jars/), installed into the local Maven repo
-  via `install_foreign_jar_to_develop_repository.sh` / `install_jars_for_maven.sh` (see [pom.xml](pom.xml)
-  dependencies with `groupId=com.EvolutionBrain`).
-- Legacy artifacts also present: `build.xml` (Ant), Eclipse project files (`.project`, `.classpath`,
-  `.checkstyle`, `.pmd`), and old Subversion metadata (`.svn/` folders — leftover from the original SVN repo,
-  now superseded by this git repo).
+- Maven project (`pom.xml`). The old `parent` POM (`com.spontech:base-pom`, lived in a private, now-defunct
+  Spontech Maven repository) has been removed; the handful of settings actually used (encoding, JDK level)
+  are now inlined directly in `pom.xml`. A snapshot of that old parent POM is kept as
+  [spontech_parent_pom.xml](spontech_parent_pom.xml) (v1.5.7) for historical reference only.
+- `maven.compiler.release` is now `17` (was JDK 1.6).
+- The 2011 vendored native/binary jars under [lib/arch/](lib/arch/) and [lib/arch_jars/](lib/arch_jars/)
+  (JOGL, GlueGen, JOCL, NativeWindow, JMDNS, per-OS/arch) are **no longer used for the main build** — `pom.xml`
+  now depends directly on current JogAmp releases from Maven Central (`org.jogamp.jogl:jogl-all:2.6.0`,
+  `org.jogamp.gluegen:gluegen-rt:2.6.0`, with `natives-macosx-universal` classifier deps) and
+  `org.jmdns:jmdns:3.6.3`. The old `install_foreign_jar_to_develop_repository.sh` / `install_jars_for_maven.sh`
+  scripts and vendored jars are now legacy/unused; only macOS natives are wired up so far — Linux/Windows
+  natives classifiers should be added when building on those platforms.
+- `javax.media.opengl.*` imports in `tw.master.gl3d.OpenGL3dImplementation`/`View` were renamed to
+  `com.jogamp.opengl.*` to match the current JOGL package layout (this was the only source change JOGL's API
+  evolution required).
+- Legacy artifacts also present: `build.xml` (Ant, unused/legacy now that Maven builds standalone), Eclipse
+  project files (`.project`, `.classpath`, `.checkstyle`, `.pmd`), and old Subversion metadata (`.svn/`
+  folders — leftover from the original SVN repo, now superseded by this git repo).
 
 ## Code layout (do not restructure)
 - `src/main/java/tw/master/brain` — core neuron/synapse/brain data model (`Brain`, `Neuron`, `Synapse`,
@@ -30,41 +46,37 @@
 - `src/main/java/tw/master/mutation` — genotype/mutation parameters driving evolution.
 - `src/main/java/tw/master/engine`, `crawler`, `tree`, `visionfield`, `math`, `remote`, `utils` — supporting
   simulation/evolution engine code.
-- `src/main/java/tw/master/gl3d` — 3D visualisation abstraction with both an OpenGL (JOGL) and a Java3D
+- `src/main/java/tw/master/gl3d` — 3D visualisation abstraction with both an OpenGL (JOGL) and a pure-Java
   implementation (`OpenGL3dImplementation`, `PurJava3dImplementation`).
 - `src/main/java/tw/gui` — Swing GUI widgets/panels.
 - Entry points: `tw.master.MasterProofMain` (per README, the original starting point),
   `EvolutionBrainClientMain`, `EvolutionBrainServerMain`.
 
 ## Modernization plan
-1. **Get it compiling standalone**
-   - Inline/replace the missing parent POM: either vendor `spontech_parent_pom.xml` as the parent, or strip
-     the dependency on it and pull the handful of settings we actually need (encoding, JDK level, a couple of
-     reporting plugins) directly into `pom.xml`.
-   - Bump `targetJdk`/`maven.compiler.source/target` from 1.6 to a current LTS (17 or 21) and fix any
-     resulting compile errors (removed APIs, `Object.finalize`, threading APIs, etc.) without changing logic.
-2. **Replace unavailable/native dependencies with modern equivalents, keeping the same abstraction seams**
-   - JOGL/GlueGen/JOCL/NativeWindow (2011 vintage, macOS 32/64-bit "universal" natives, no Apple Silicon
-     support) → migrate to a current JOGL 2.x release (available on Maven Central) which already handles
-     multi-arch natives without the manual per-OS jar vendoring.
-   - Since the code already has a `World3dInterface`/`World3dDrawInterface` abstraction with separate JOGL and
-     Java3D implementations, keep that seam and just update `OpenGL3dImplementation` to the new JOGL 2.x API
-     (package/class names changed since 2011); Java3D branch can likely be dropped or kept behind the same
-     interface if still useful.
-   - `jmdns` → current version available on Maven Central, should be close to drop-in.
-   - `fest-swing` (1.2, dead project) → only used for tests; either drop or replace with AssertJ-Swing (the
-     maintained fork with a compatible API) if the tests are worth keeping.
-3. **Clean up the build**
-   - Remove/ignore leftover `.svn` directories and Eclipse-specific files, or leave them but don't treat them
-     as source of truth (git is now authoritative).
-   - Drop the `build.xml` (Ant) path if Maven is the build system of record, or note it as legacy/unused.
-   - Re-point `distributionManagement`/`scm` sections (currently point at defunct
-     `develop.spontech-spine.com`) or remove them if no longer applicable.
-4. **Verify behavior, not redesign it**
-   - Once it compiles and the 3D window opens, use `MasterProofMain` to confirm the simulation/evolution loop
-     still produces the same behavior as before.
-   - Add/keep JUnit tests (already present under `src/test/java`) as a regression net while updating
-     dependencies, rather than rewriting the neural network/mutation algorithms themselves.
+1. ✅ **Get it compiling standalone** — done. Parent POM removed, settings inlined, `maven.compiler.release=17`.
+   No other JDK-1.6-era compile errors turned up besides a generics-inference tightening in `ZebraJTable`
+   (fixed by widening the constructor's `Vector<?>` param to `Vector<? extends Vector>` to match `JTable`'s
+   own constructor signature).
+2. ✅ **Replace unavailable/native dependencies with modern equivalents, keeping the same abstraction seams**
+   — done for JOGL/GlueGen/JMDNS (see Build setup above); `PurJava3dImplementation` turned out to need no
+   migration at all (it's pure AWT/Graphics2D, not the deprecated Java3D API). Still open:
+   - `jocl`/`joal`/`nativewindow` vendored deps are unused by main sources (only `nativewindow` is a
+     transitive dep of `jogl-all` now) — `jocl` is only referenced by the test-only `CLInfo.java`.
+   - Only macOS natives are wired up in `pom.xml` so far; add `natives-linux-amd64`/`natives-windows-amd64`
+     etc. classifiers when building on those platforms.
+   - `fest-swing` (1.2, dead project) is still used by several tests (`src/test/java/tw/gui/annotiations/*`,
+     `ImagePanelTest`, `ActivationFunctionFactoryTest`) and is **not yet migrated** — test-source compilation
+     (`mvn test-compile`/`test`) will fail until it's replaced (AssertJ-Swing) or dropped, same for the
+     OpenCL-only `CLInfo.java` test.
+3. **Clean up the build** (mostly done)
+   - Dead `scm`/`distributionManagement` pointing at `develop.spontech-spine.com` and the `com.spontech`
+     parent were removed from `pom.xml`.
+   - `.svn` directories, Eclipse project files, and `build.xml` (Ant) are still present as legacy/unused —
+     left in place since git/Maven are now authoritative, but not relied upon.
+4. ✅ **Verify behavior, not redesign it** — `mvn compile exec:java` launches `MasterProofMain`: the engine
+   starts, loads `images/Trails.png`, and opens the Swing/JOGL 3D window without errors (only benign,
+   internally-caught JOGL reflection warnings on the AWT thread, silenced by the `--add-opens` flag).
+   JUnit test suite has not been run yet — blocked on the `fest-swing`/`jocl` test dependency migration above.
 5. **Explicitly out of scope**
    - Do not swap the custom `Brain`/`Neuron`/`Synapse` model for an external neural-network library (e.g.
      DL4J, Deeplearning libs) — the thesis's value is in its own implementation.
